tests/cases/parser/misc/missing_expression_in_function_call.stderr
error: expected an expression
 --> $DIR/missing_expression_in_function_call.hash:3:11
2 |   
3 |   l := f(a = );
  |             ^ 
